<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.posh.preggietest.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:src="@drawable/logo" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_name"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="285dp" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_password"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="285dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_login"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
